# libBICOS

./: .gitignore  CMakeLists.txt  README.md  meson.build  meson.options  notes.txt  setup.py
bench/: cpu.cpp  cuda-rtx4090.txt  cuda.cu
bench/baselines/: cuda-rtx4090.txt
cmake/: config.hpp.in
data/: .gitignore  prepare.sh  sha256sums.txt
include/: bitfield.hpp  common.hpp  compat.hpp  config.hpp  cpu.hpp  cuda.hpp  fileutils.hpp  formatable.hpp  match.hpp  stepbuf.hpp
include/impl/: common.hpp  util.hpp
include/impl/cpu/: agree.hpp  bicos.hpp  bitfield.hpp  descriptor_transform.hpp
include/impl/cuda/: agree.cuh  bicos.cuh  bitfield.cuh  cutil.cuh  descriptor_transform.cuh
pybicos/: __init__.py
src/: cli.cpp  exception.cpp  fileutils.cpp  formatable.cpp  lib.cpp  pybicos.cpp  pybicos_c.cpp
src/impl/: cpu.cpp  cuda.cu  cuda.cu.in
src/impl/cuda/: cutil.cu
subprojects/: .gitignore
test/: agree.cu  agree_subpixel_smem.cu  bicos.cu  cutil.cu  descriptor_transform.cu  integration.cu  integration_raw.cu  regress.bash
test/include/: common.cuh  util.cuh
test_python/: test_.py
